2004-08-22  Mark Kettenis  <kettenis@gnu.org>

	* infptrace.c: Include "gdb_assert.h".
	(PTRACE_XFER_TYPE): Remove define.
	(offsetof): Only define if U_REGS_OFFSET isn't defined.
	(fetch_register, store_register): Rewrite to use PTRACE_TYPE_RET.
	Tweak comment.
	(fetch_inferior_registers, store_inferior_registers): Remove
	redundant culry braces.  Tweak comment.  s/regno/regnum.
	* Makefile.in (infptrace.o): Update dependencies.

	* configure.in: Change test for return type of ptrace to default
	to `long' instead of `int'.
	* configure: Regenerate.	

2004-08-21  Mark Kettenis  <kettenis@gnu.org>

	* config/alpha/alpha-linux.mh (LOADLIBES): New variable.

	* configure.in: Check for ttrace function.
	* configure, config.in: Regenerate.	

	* gdb_ptrace.h: New file.
	* infptrace.c: Include "gdb_ptrace.h" instead of <ptrace.h> or
	<sys/ptrace.h>.
	(PT_READ_I, PT_READ_D, PT_READ_U, PT_WRITE_I, PT_WRITE_D)
	(PT_WRITE_U, PT_CONTINUE, PT_STEP, PT_KILL): Remove defines.
	(attach): Don't define PT_ATTACH.
	(detach): Don't define PT_DETACH.
	* Makefile.in (gdb_ptrace_h): New variable.
	(infptrace.o): Update dependencies.

2004-08-16  Mark Kettenis  <kettenis@gnu.org>

	* inferior.h (PTRACE_ARG3_TYPE): Define as PTRACE_TYPE_ARG3
	instead of `int' if not already defined.
	(call_ptrace): Revert change that replaced PTRACE_ARG3_TYPE with
	PTRACE_TYPE_ARG3.
	* infptrace.c (call_ptrace): Revert change that replaced
	PTRACE_ARG3_TYPE with PTRACE_TYPE_ARG3.

2004-08-15  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/nm-linux64.h (PTRACE_ARG3_TYPE, PTRACE_XFER_TYPE):
	Remove defines.

	* linux-nat.c (kill_inferior): Add missing third and fourth
	arguments to ptrace call.  Don't use PTRACE_ARG3_TYPE.

	* infptrace.c (child_xfer_memory): Replace PTRACE_XFER_TYPE with
	PTRACE_TYPE_RET.

	* proc-why.c (proc_prettyfprint_why): Fix format string.

	* solib-osf.c (osf_current_sos): Remove unsused label.

	* configure.in: Add <ncurses/ncurses.h> to the list of possible
	curses headers.